[project]
name = "game-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
]
